# virt86-demos

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/basic-demo/: CMakeLists.txt  README.md
apps/basic-demo/src/: align_alloc.cpp  align_alloc.hpp  demo.cpp  print_helpers.cpp  print_helpers.hpp  utils.cpp  utils.hpp
apps/common/: CMakeLists.txt  README.md
apps/common/include/: align_alloc.hpp  print_helpers.hpp  utils.hpp
apps/common/src/: align_alloc.cpp  print_helpers.cpp  utils.cpp
apps/x64-guest/: CMakeLists.txt  README.md
apps/x64-guest/src/: ram.asm  rom.asm  x64guest.cpp
